# Terraformageddon

./: .gitignore  README.md  docker-compose.yml  index.html  level1.html  split.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: base.py
backend/app/models/: __init__.py  progress.py  user.py
backend/app/routers/: sessions.py  users.py  websocket.py
backend/app/schemas/: session.py
backend/app/services/: auth_service.py  level_loader.py  session_manager.py  terraform_runner.py
backend/docker/terraform-sandbox/: .terraformrc  Dockerfile
backend/levels/level1/: config.yaml  main.tf.template
css/: style.css
js/: api.js  app.js
